force-app/main/default/objects/OCE__ToDo__c/OCE__ToDo__c.object-meta.xml
<CustomObject>
    <description>To-Dos for Objectives.</description>
    <label>To-Do</label>
    <nameField>
        <label>To-Do Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>To-Do</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>