force-app/main/default/objects/OCE__ToDo__c/fields/Accept_Status__c.field-meta.xml
<CustomField>
    <fullName>Accept_Status__c</fullName>
    <label>Accept Status</label>
    <length>12</length>
    <type>Text</type>
</CustomField>