force-app/main/default/objects/OCE__ToDo__c/fields/Accept_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Accept_Status_Date__c</fullName>
    <label>Accept Status Date</label>
    <type>DateTime</type>
</CustomField>