force-app/main/default/objects/OCE__ToDo__c/fields/Accept_Status_Person__c.field-meta.xml
<CustomField>
    <fullName>Accept_Status_Person__c</fullName>
    <label>Accept Status Person</label>
    <length>25</length>
    <type>Text</type>
</CustomField>