force-app/main/default/objects/OCE__ToDo__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>