force-app/main/default/objects/OCE__ToDo__c/fields/Deep_Link__c.field-meta.xml
<CustomField>
    <fullName>Deep_Link__c</fullName>
    <label>Deep Link</label>
    <type>Url</type>
</CustomField>