force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Activity_Name_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Name_Local_Language__c</fullName>
    <formula>OCE__AccountTactic__r.Lilly_Activity_Name_Local_Language__c</formula>
    <label>Activity Name (Local Language)</label>
    <type>Text</type>
</CustomField>