force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Owner__c</fullName>
    <formula>OCE__AccountTactic__r.Lilly_ActivityOwner__r.FirstName  + OCE__AccountTactic__r.Lilly_ActivityOwner__r.LastName</formula>
    <label>Activity Owner</label>
    <type>Text</type>
</CustomField>