force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Activity_Type__c</fullName>
    <formula>TEXT(OCE__AccountTactic__r.Lilly_Activity_Type__c)</formula>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>