force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Actual_US_Contracted_HCPs__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Actual_US_Contracted_HCPs__c</fullName>
    <formula>OCE__AccountTactic__r.Lilly_Actual_US_Contracted_HCPs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual # US Contracted HCPs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>