force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Associated_Congress__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Associated_Congress__c</fullName>
    <formula>TEXT(OCE__AccountTactic__r.Lilly_Associated_Congress__c )</formula>
    <label>Associated Congress</label>
    <type>Text</type>
</CustomField>