force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Black_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Black_Flag__c</fullName>
    <formula>OCE__Account__r.Lilly_Black_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Black Flag</label>
    <type>Checkbox</type>
</CustomField>