force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Cancellation_Reason__c</fullName>
    <formula>TEXT(  OCE__AccountTactic__r.Lilly_Cancellation_Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Reason</label>
    <type>Text</type>
</CustomField>