force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Contracting_Status__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contracting_Status__c</fullName>
    <formula>TEXT(  OCE__Account__r.Lilly_Contracting_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracting Status</label>
    <type>Text</type>
</CustomField>