force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Execution_Status__c</fullName>
    <formula>TEXT( OCE__AccountTactic__r.Lilly_Execution_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Status</label>
    <type>Text</type>
</CustomField>