force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Forecasted_US_Contracted_HCPS__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Forecasted_US_Contracted_HCPS__c</fullName>
    <formula>OCE__AccountTactic__r.Lilly_Forecasted_US_Contracted_HCPs__c</formula>
    <label>Forecasted # US Contracted HCPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>