force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Functional_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Functional_Owner__c</fullName>
    <formula>Text(OCE__AccountTactic__r.Lilly_Functional_Owner__c)</formula>
    <label>Functional Owner</label>
    <type>Text</type>
</CustomField>