force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Maximum_of_Contracted_Participants__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Maximum_of_Contracted_Participants__c</fullName>
    <formula>OCE__AccountTactic__r.Lilly_Max_of_Contracted_Participants__c</formula>
    <label>Maximum # of Contracted Participants</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>