force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_nominations_this_EP_current__c.field-meta.xml
<CustomField>
    <fullName>Lilly_nominations_this_EP_current__c</fullName>
    <label># nominations this EP(current)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>