force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_of_nominations_this_EP_original__c.field-meta.xml
<CustomField>
    <fullName>Lilly_of_nominations_this_EP_original__c</fullName>
    <label># of nominations this EP(original)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>