force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Rising_Star__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Rising_Star__c</fullName>
    <formula>OCE__Account__r.Rising_Star__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rising Star</label>
    <type>Checkbox</type>
</CustomField>