force-app/main/default/objects/OCE__ToDo__c/fields/Lilly_Spend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Spend_Threshold__c</fullName>
    <formula>OCE__Account__r.Lilly_Spend_Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Threshold %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>