force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is populated automatically during creation and it will become read only.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ToDo</relationshipName>
    <type>Lookup</type>
</CustomField>