force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AccountCompliance__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountCompliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent account compliance.</description>
    <inlineHelpText>Parent account compliance.</inlineHelpText>
    <label>Account Compliance</label>
    <referenceTo>OCE__AccountCompliance__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>