force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AccountComplianceCycle__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountComplianceCycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent account compliance cycle.</description>
    <inlineHelpText>Parent account compliance cycle.</inlineHelpText>
    <label>Account Compliance Cycle</label>
    <referenceTo>OCE__AccountComplianceCycle__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>