force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AccountObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountObjective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Account Objective.</description>
    <inlineHelpText>Link to related Account Objective.</inlineHelpText>
    <label>Account Objective</label>
    <referenceTo>OCE__AccountObjective__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>ToDo</relationshipName>
    <type>Lookup</type>
</CustomField>