force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AccountTactic__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountTactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to parent parent Account Tactics.</description>
    <label>Tactic</label>
    <referenceTo>OCE__AccountTactic__c</referenceTo>
    <relationshipLabel>To-Dos</relationshipLabel>
    <relationshipName>ToDos</relationshipName>
    <type>Lookup</type>
</CustomField>