force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AdaSequenceExternalId__c.field-meta.xml
<CustomField>
    <fullName>OCE__AdaSequenceExternalId__c</fullName>
    <description>An external Id field for ADA.</description>
    <externalId>true</externalId>
    <label>Ada Sequence External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>