force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>OCE__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up tp assigned User.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ToDo</relationshipName>
    <type>Lookup</type>
</CustomField>