force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AssignedToName__c.field-meta.xml
<CustomField>
    <fullName>OCE__AssignedToName__c</fullName>
    <description>Name of Assignee.</description>
    <formula>OCE__AssignedTo__r.FirstName &amp;&quot; &quot;&amp;  OCE__AssignedTo__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssignedToName</label>
    <type>Text</type>
</CustomField>