force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AssignedUserEmail__c.field-meta.xml
<CustomField>
    <fullName>OCE__AssignedUserEmail__c</fullName>
    <description>Assigned User Email (MVP)</description>
    <label>Assigned User Email</label>
    <type>Email</type>
</CustomField>