force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AssignedUserNameRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__AssignedUserNameRef__c</fullName>
    <description>Denormalized Assigned User Name (MVP)</description>
    <label>Assigned User Name Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>