force-app/main/default/objects/OCE__ToDo__c/fields/OCE__AuxiliaryRecordId__c.field-meta.xml
<CustomField>
    <fullName>OCE__AuxiliaryRecordId__c</fullName>
    <description>Id of the auxiliary related record. Example: Meeting History Id</description>
    <inlineHelpText>Id of the auxiliary related record. Example: Meeting History Id</inlineHelpText>
    <label>Auxiliary Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>