force-app/main/default/objects/OCE__ToDo__c/fields/OCE__BusinessToDo__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessToDo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Business To-Do it was converted from.</description>
    <label>Business To-Do</label>
    <referenceTo>OCE__BusinessToDo__c</referenceTo>
    <relationshipLabel>To-Dos</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>