force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Category__c.field-meta.xml
<CustomField>
    <fullName>OCE__Category__c</fullName>
    <description>Category of the record. Example: Approve</description>
    <inlineHelpText>Category of the record. Example: Approve</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Execute</fullName>
            </value>
            <value>
                <fullName>Conclude</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>RAI</fullName>
            </value>
            <value>
                <fullName>Abandon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>