force-app/main/default/objects/OCE__ToDo__c/fields/OCE__CommentSubtype__c.field-meta.xml
<CustomField>
    <fullName>OCE__CommentSubtype__c</fullName>
    <description>Subtype of the comment.</description>
    <inlineHelpText>Subtype of the comment.</inlineHelpText>
    <label>Comment Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCE__CommentType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clarification Request</fullName>
            </value>
            <value>
                <fullName>Feedback Request</fullName>
            </value>
            <value>
                <fullName>How-to</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Revision Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>