force-app/main/default/objects/OCE__ToDo__c/fields/OCE__CommentText__c.field-meta.xml
<CustomField>
    <fullName>OCE__CommentText__c</fullName>
    <description>Text of the comment about missing data, questions about how to complete a section, clarification about the data provided, etc.</description>
    <inlineHelpText>Text of the comment about missing data, questions about how to complete a section, clarification about the data provided, etc.</inlineHelpText>
    <label>Comment Text</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>