force-app/main/default/objects/OCE__ToDo__c/fields/OCE__CommentType__c.field-meta.xml
<CustomField>
    <fullName>OCE__CommentType__c</fullName>
    <description>Type of the comment.</description>
    <inlineHelpText>Type of the comment.</inlineHelpText>
    <label>Comment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requestor Comment</fullName>
            </value>
            <value>
                <fullName>Reviewer Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>