force-app/main/default/objects/OCE__ToDo__c/fields/OCE__CompletionCallToDo__c.field-meta.xml
<CustomField>
    <fullName>OCE__CompletionCallToDo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Call ToDo that completes respective ToDo.</description>
    <inlineHelpText>Reference to Call ToDo that completes respective ToDo.</inlineHelpText>
    <label>Completion Call ToDo</label>
    <referenceTo>OCE__CallToDo__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>