force-app/main/default/objects/OCE__ToDo__c/fields/OCE__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__CompletionDate__c</fullName>
    <description>Date when task was completed.</description>
    <inlineHelpText>Date when task was completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>