force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Description__c.field-meta.xml
<CustomField>
    <fullName>OCE__Description__c</fullName>
    <description>This field holds personalized information about the Account which is helpful for Sales Rep to refer to.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>