force-app/main/default/objects/OCE__ToDo__c/fields/OCE__DueDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DueDate__c</fullName>
    <description>Due Date of To Do.</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>