force-app/main/default/objects/OCE__ToDo__c/fields/OCE__EmailTransaction__c.field-meta.xml
<CustomField>
    <fullName>OCE__EmailTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Email Transaction record.</description>
    <label>Email Transaction</label>
    <referenceTo>OCE__EmailTransaction__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>