force-app/main/default/objects/OCE__ToDo__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>End Date of To-Do.</description>
    <label>End On</label>
    <type>Date</type>
</CustomField>