force-app/main/default/objects/OCE__ToDo__c/fields/OCE__FilterTerritory__c.field-meta.xml
<CustomField>
    <fullName>OCE__FilterTerritory__c</fullName>
    <description>Related Territories.</description>
    <label>Filter Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>