force-app/main/default/objects/OCE__ToDo__c/fields/OCE__InterviewedBy__c.field-meta.xml
<CustomField>
    <fullName>OCE__InterviewedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who did compliance interview.</description>
    <inlineHelpText>User who did compliance interview.</inlineHelpText>
    <label>Interviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ComplianceToDos</relationshipName>
    <type>Lookup</type>
</CustomField>