force-app/main/default/objects/OCE__ToDo__c/fields/OCE__InterviewedByName__c.field-meta.xml
<CustomField>
    <fullName>OCE__InterviewedByName__c</fullName>
    <description>User name which interviewed account.</description>
    <formula>OCE__InterviewedBy__r.FirstName + &apos; &apos; +  OCE__InterviewedBy__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User name which interviewed account.</inlineHelpText>
    <label>Interviewed By Name</label>
    <type>Text</type>
</CustomField>