force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Interviewee__c.field-meta.xml
<CustomField>
    <fullName>OCE__Interviewee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account which was interviewed.</description>
    <inlineHelpText>Account which was interviewed.</inlineHelpText>
    <label>Interviewee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>To-Do (Interviewee)</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>