force-app/main/default/objects/OCE__ToDo__c/fields/OCE__IntervieweeName__c.field-meta.xml
<CustomField>
    <fullName>OCE__IntervieweeName__c</fullName>
    <description>Account which has been interviewed.</description>
    <formula>OCE__Interviewee__r.OCE__AccountFullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account which has been interviewed.</inlineHelpText>
    <label>Interviewee Name</label>
    <type>Text</type>
</CustomField>