force-app/main/default/objects/OCE__ToDo__c/fields/OCE__IntervieweeOther__c.field-meta.xml
<CustomField>
    <fullName>OCE__IntervieweeOther__c</fullName>
    <description>Other person who was interviewed</description>
    <inlineHelpText>Other person who was interviewed</inlineHelpText>
    <label>Other Interviewee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>