force-app/main/default/objects/OCE__ToDo__c/fields/OCE__IsSubscribed__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsSubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether a record originates from the current org.</description>
    <inlineHelpText>Defines whether a record originates from the current org.</inlineHelpText>
    <label>Is Subscribed</label>
    <type>Checkbox</type>
</CustomField>