force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Meeting__c.field-meta.xml
<CustomField>
    <fullName>OCE__Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Meeting.</description>
    <label>Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>