force-app/main/default/objects/OCE__ToDo__c/fields/OCE__MeetingLocation__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Meeting Location.</description>
    <label>Meeting Location</label>
    <referenceTo>OCE__MeetingLocation__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>ToDo</relationshipName>
    <type>Lookup</type>
</CustomField>