force-app/main/default/objects/OCE__ToDo__c/fields/OCE__MeetingMember__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Meeting Member.</description>
    <label>Meeting Member</label>
    <referenceTo>OCE__MeetingMember__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>ToDo</relationshipName>
    <type>Lookup</type>
</CustomField>