force-app/main/default/objects/OCE__ToDo__c/fields/OCE__NotifiedUser__c.field-meta.xml
<CustomField>
    <fullName>OCE__NotifiedUser__c</fullName>
    <description>Field to store users who are tagged to review a comment</description>
    <label>Notified User(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>