force-app/main/default/objects/OCE__ToDo__c/fields/OCE__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>OCE__ObjectApiName__c</fullName>
    <description>Name of the object that the comment is for, to categorize comments in reports.</description>
    <inlineHelpText>Name of the object that the comment is for, to categorize comments in reports.</inlineHelpText>
    <label>Object API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>