force-app/main/default/objects/OCE__ToDo__c/fields/OCE__ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentAccount__c</fullName>
    <description>This field is used in validation for Account lookup.</description>
    <formula>OCE__AccountObjective__r.OCE__AccountPlan__r.OCE__Account__c</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>