force-app/main/default/objects/OCE__ToDo__c/fields/OCE__ParentToDo__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentToDo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the To-Do record that is the parent of this record. Used for comments in a thread.</description>
    <inlineHelpText>Reference to the To-Do record that is the parent of this record. Used for comments in a thread.</inlineHelpText>
    <label>Parent To-Do</label>
    <referenceTo>OCE__ToDo__c</referenceTo>
    <relationshipLabel>To-Dos</relationshipLabel>
    <relationshipName>ToDos</relationshipName>
    <type>Lookup</type>
</CustomField>