force-app/main/default/objects/OCE__ToDo__c/fields/OCE__RecordId__c.field-meta.xml
<CustomField>
    <fullName>OCE__RecordId__c</fullName>
    <description>Id of the record that the comment is for.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id of the record that the comment is for.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>