force-app/main/default/objects/OCE__ToDo__c/fields/OCE__RelatedCall__c.field-meta.xml
<CustomField>
    <fullName>OCE__RelatedCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Call record.</description>
    <label>Call</label>
    <referenceTo>OCE__Call__c</referenceTo>
    <relationshipLabel>To-Do</relationshipLabel>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>