force-app/main/default/objects/OCE__ToDo__c/fields/OCE__ShowInPlanner__c.field-meta.xml
<CustomField>
    <fullName>OCE__ShowInPlanner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the To-Do event on the planner page.</description>
    <label>Show in Planner</label>
    <type>Checkbox</type>
</CustomField>