force-app/main/default/objects/OCE__ToDo__c/fields/OCE__SkipReason__c.field-meta.xml
<CustomField>
    <fullName>OCE__SkipReason__c</fullName>
    <description>Stores JSON value of reason why activity was skipped, is used by ADA</description>
    <label>Skip Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>