force-app/main/default/objects/OCE__ToDo__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Start Date of To-Do.</description>
    <label>Start On</label>
    <type>Date</type>
</CustomField>