force-app/main/default/objects/OCE__ToDo__c/fields/OCE__SurveyType__c.field-meta.xml
<CustomField>
    <fullName>OCE__SurveyType__c</fullName>
    <description>Channel using which account was interviewed.</description>
    <inlineHelpText>Channel using which account was interviewed.</inlineHelpText>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face To Face</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>