force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Tactic__c.field-meta.xml
<CustomField>
    <fullName>OCE__Tactic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Tactic of To Do.</description>
    <label>Tactic</label>
    <referenceTo>OCE__Tactic__c</referenceTo>
    <relationshipName>ToDo</relationshipName>
    <type>Lookup</type>
</CustomField>