force-app/main/default/objects/OCE__ToDo__c/fields/OCE__TaskDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__TaskDate__c</fullName>
    <description>Task Date.</description>
    <label>Task Date</label>
    <type>DateTime</type>
</CustomField>