force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Territory__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territory__c</fullName>
    <description>Territory To Do is assigned to.</description>
    <formula>OCE__AccountObjective__r.OCE__AccountPlan__r.OCE__Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory</label>
    <type>Text</type>
</CustomField>