force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Type__c.field-meta.xml
<CustomField>
    <fullName>OCE__Type__c</fullName>
    <description>Type of the ToDo record.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>