force-app/main/default/objects/OCE__ToDo__c/fields/OCE__User__c.field-meta.xml
<CustomField>
    <fullName>OCE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connected User.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>To_Do</relationshipName>
    <type>Lookup</type>
</CustomField>