force-app/main/default/objects/OCE__ToDo__c/fields/OCE__Visibility__c.field-meta.xml
<CustomField>
    <fullName>OCE__Visibility__c</fullName>
    <description>Defines who should see this comment.</description>
    <inlineHelpText>Defines who should see this comment.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Users</fullName>
            </value>
            <value>
                <fullName>Internal Users</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>