force-app/main/default/objects/OCE__ToDo__c/fields/This_TL_was_Selected_Contracted_for_the__c.field-meta.xml
<CustomField>
    <fullName>This_TL_was_Selected_Contracted_for_the__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lilly field</description>
    <label>This TL was Selected/Contracted</label>
    <type>Checkbox</type>
</CustomField>